--- a/Facial_Recognition.ipynb
+++ b/Facial_Recognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOxYgXB0TrPJzzN1xcDDygm",
+      "authorship_tag": "ABX9TyPdwnEf+7m7NWAiqhfUZyD/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,12 +30,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "cCj4TWzvGc68"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# @title Dependencies\n",
+        "import cv2\n",
+        "import os\n",
+        "import random\n",
+        "import numpy as np\n",
+        "from matplotlib import pyplot as plt"
+      ]
     }
   ]
 }
